src/dnsmasq.h

#  define _(S) (S)
#  define _(S) gettext(S)
struct all_addr {
    union {
        struct in_addr addr4;
#ifdef HAVE_IPV6
        struct in6_addr addr6;
#endif
        /* for log_query */
        struct {
            uint16_t keytag, algo, digest;
        } log;
        /* for log_query */
        struct {
            uint32_t rcode;
        } rcode;
        /* for cache_insert of DNSKEY, DS */
        struct {
            uint16_t _class, type;
        } dnssec;
    } addr;
};
struct cname {
    int ttl, flag;
    char* alias, * target;
    struct cname* next, * targetp;
};
struct interface_name {
    char* name; /* domain name */
    char* intr; /* interface name */
    int family; /* AF_INET, AF_INET6 or zero for both */
    struct addrlist* addr;
    struct interface_name* next;
};
union bigname {
    char name[MAXDNAME];
    union bigname* next; /* freelist */
};
struct blockdata {
    struct blockdata* next;
    unsigned char key[KEYBLOCK_LEN];
};
struct crec {
    struct crec* hash_next;
    struct crec* prev;
    struct crec* next;
    /* union is 16 bytes when doing IPv6, 8 bytes on 32 bit machines without IPv6 */
    union {
        struct all_addr addr;
        struct {
            union {
                struct crec* cache;
                struct interface_name* int_name;
            } target;
            uint32_t uid; /* 0 if union is interface-name */
        } cname;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, flags, keytag;
            unsigned char algo;
        } key;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, keytag;
            unsigned char algo;
            unsigned char digest;
        } ds;
    } addr;
    time_t ttd; /* time to die */
    /* used as class if DNSKEY/DS, index to source for F_HOSTS */
    uint32_t uid;
    uint16_t flags;
    union {
        char sname[SMALLDNAME];
        union bigname* bname;
        char* namep;
    } name;
};
/* struct sockaddr is not large enough to hold any address,
   and specifically not big enough to hold an IPv6 address.
   Blech. Roll our own. */
union mysockaddr {
    struct sockaddr sa;
    struct sockaddr_in in;
#if defined(HAVE_IPV6)
    struct sockaddr_in6 in6;
#endif
};
struct irec {
    union mysockaddr addr;
    struct in_addr netmask; /* only valid for IPv4 */
    int tftp_ok, dhcp_ok, mtu, done, warned, dad, dns_auth, index, multicast_done, found, label;
    char* name;
    struct irec* next;
};
struct listener {
    int fd, tcpfd, tftpfd, family;
    struct irec* iface; /* only sometimes valid for non-wildcard */
    struct listener* next;
};
/* interface and address parms from command line. */
struct iname {
    char* name;
    union mysockaddr addr;
    int used;
    struct iname* next;
};
struct hostsfile {
    struct hostsfile* next;
    int flags;
    char* fname;
#ifdef HAVE_INOTIFY
    int wd; /* inotify watch descriptor */
#endif
    uint32_t index; /* matches to cache entries for logging */
};
struct crec* cache_enumerate(int init);
void blockdata_report(void);
void *blockdata_retrieve(struct blockdata *block, size_t len, void *data);
void blockdata_free(struct blockdata *blocks);
/* domain.c */
char* get_domain(struct in_addr addr);
char *get_domain6(struct in6_addr *addr);
int add_resource_record(struct dns_header* header, char* limit, int* truncp,
        int nameoffset, unsigned char** pp, unsigned long ttl,
        int* offset, uint16_t type, uint16_t _class, char* format, ...);
int in_arpa_name_2_addr(char* namein, struct all_addr* addrp);
char* canonicalise(char* in, int* nomem);
void* safe_malloc(size_t size);
void* whine_malloc(size_t size);
int prettyprint_addr(union mysockaddr* addr, char* buf);
int read_write(int fd, unsigned char* packet, int size, int rw);
/* log.c */
void die(char* message, char* arg1, int exit_code) ATTRIBUTE_NORETURN;
struct hostsfile* expand_filelist(struct hostsfile* list);
int fix_fd(int fd);
void set_dynamic_inotify(int flag, int total_size, struct crec **rhash, int revhashsz);