src/slack.rs

use crate::defines::{__caddr_t, C2RustUnnamed_1A, Ifmap, InPktInfo};

extern "C" {
    #[no_mangle]
    fn cache_enumerate(init: i32) -> crec;


    #[no_mangle]
    fn add_resource_record(header: &mut dns_header, limit: &mut String,
                           truncp: , nameoffset: i32,
                           pp: , ttl: u32,
                           offset: , type_0: u16,
                           class: u16, format: &mut String,
                           _: ...) -> i32;
    #[no_mangle]
    fn in_arpa_name_2_addr(namein: &mut String, addrp:  &mut all_addr)
                           -> i32;







}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct __va_list_tag {
    pub gp_offset: u32,
    pub fp_offset: u32,
    pub overflow_arg_area:Vec<u8>,
    pub reg_save_area:Vec<u8>,
}























#[derive(Copy, Clone)]
#[repr(C)]
pub struct _IO_FILE {
    pub _flags: i32,
    pub _IO_read_ptr: &mut String,
    pub _IO_read_end: &mut String,
    pub _IO_read_base: &mut String,
    pub _IO_write_base: &mut String,
    pub _IO_write_ptr: &mut String,
    pub _IO_write_end: &mut String,
    pub _IO_buf_base: &mut String,
    pub _IO_buf_end: &mut String,
    pub _IO_save_base: &mut String,
    pub _IO_backup_base: &mut String,
    pub _IO_save_end: &mut String,
    pub _markers: &mut _IO_marker,
    pub _chain: &mut _IO_FILE,
    pub _fileno: i32,
    pub _flags2: i32,
    pub _old_offset: __off_t,
    pub _cur_column: u16,
    pub _vtable_offset: libc::c_schar,
    pub _shortbuf: [libc::c_char; 1],
    pub _lock:Vec<u8>,
    pub _offset: __off64_t,
    pub _codecvt: &mut _IO_codecvt,
    pub _wide_data: &mut _IO_wide_data,
    pub _freeres_list: &mut _IO_FILE,
    pub _freeres_buf:Vec<u8>,
    pub __pad5: usize,
    pub _mode: i32,
    pub _unused2: [libc::c_char; 20],
}
pub type _IO_lock_t = ();
pub type FILE = _IO_FILE;

































#[derive(Copy, Clone)]
#[repr(C)]
pub struct iname {
    pub name: &mut String,
    pub addr: NetAddress,
    pub used: i32,
    pub next: &mut iname,
}



































#[inline]
unsafe extern "C" fn stat(mut __path: *const libc::c_char,
                          mut __statbuf: &mut stat) -> i32 {
    return __xstat(1, __path, __statbuf);
}



#[inline]












#[inline]
unsafe extern "C" fn getline(mut __lineptr: String,
                             mut __n: &mut size_t, mut __stream: &mut FILE)
                             -> __ssize_t {
    return __getdelim(__lineptr, __n, '\n' as i32, __stream);
}

#[inline]
unsafe extern "C" fn ferror_unlocked(mut __stream: &mut FILE) -> i32 {
    return (__stream._flags & 0x20 != 0)  libc::c_int;
}




#[inline]
unsafe extern "C" fn bsearch(mut __key: *const libc::c_void,
                             mut __base: *const libc::c_void,
                             mut __nmemb: usize, mut __size: usize,
                             mut __compar: __compar_fn_t)
                             ->Vec<u8> {
    let mut __l: usize = 0;
    let mut __u: usize = 0;
    let mut __idx: usize = 0;
    let mut __p: *const libc::c_void = 0;
    let mut __comparison: i32 = 0;
    __l = 0 ;
    __u = __nmemb;
    while __l < __u {
        __idx =
            __l.wrapping_add(__u).wrapping_div(2   );
        __p =
            (__base          *const libc::c_char).offset(__idx.wrapping_mul(__size)          isize);
        __comparison =
            Some(__compar.expect("non-null function pointer")).expect("non-null function pointer")(__key,
                                                                                                   __p);
        if __comparison < 0 {
            __u = __idx
        } else if __comparison > 0 {
            __l = __idx.wrapping_add(1)
        } else { return __p }
    }
    return 0;
}




#[inline]
unsafe extern "C" fn wcstoimax(mut nptr: *const __gwchar_t,
                               mut endptr: &mut __gwchar_t.
                               mut base: i32) -> intmax_t {
    return __wcstol_internal(nptr, endptr, base, 0);
}



extern "C" {









    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;






    #[no_mangle]
    fn free(__ptr:Vec<u8>);







    #[no_mangle]
    fn whine_malloc(size: usize) ->Vec<u8>;

    #[no_mangle]
    fn read_write(fd: i32, packet: mut Vec<u8>,
                  size: i32, rw: i32) -> i32;
}















































#[derive(Copy, Clone)]
#[repr(C)]
pub struct listener {
    pub fd: i32,
    pub tcpfd: i32,
    pub tftpfd: i32,
    pub used: i32,
    pub addr: NetAddress,
    pub iface: &mut irec,
    pub next: Listener,
}





































#[inline]
unsafe extern "C" fn fstat64(mut __fd: i32,
                             mut __statbuf: &mut stat64) -> i32 {
    return __fxstat64(1, __fd, __statbuf);
}



extern "C" {

    pub type __dirstream;











    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memcmp(_: *const libc::c_void, _: *const libc::c_void,
              _: u32) -> i32;

    #[no_mangle]
    fn strncpy(_: &mut String, _: *const libc::c_char, _: u32)
               -> &mut String;



    #[no_mangle]
    fn strtok(_: &mut String, _: *const libc::c_char)
              -> &mut String;

    #[no_mangle]
    fn if_indextoname(__ifindex: u32, __ifname: &mut String)
                      -> &mut String;
    #[no_mangle]
    fn close(__fd: i32) -> i32;
    #[no_mangle]
    fn read(__fd: i32, __buf:Vec<u8>, __nbytes: usize)
            -> ssize_t;
    #[no_mangle]
    fn write(__fd: i32, __buf: *const libc::c_void, __n: usize)
             -> ssize_t;
    #[no_mangle]
    fn pipe(__pipedes: ) -> i32;





    #[no_mangle]
    fn calloc(_: u32, _: u32) ->Vec<u8>;
    #[no_mangle]
    fn free(__ptr:Vec<u8>);
    #[no_mangle]
    fn open(__file: *const libc::c_char, __oflag: i32, _: ...)
            -> i32;
    #[no_mangle]
    fn __ctype_b_loc() -> u16;


    #[no_mangle]
    fn time(__timer: &mut time::Instant) -> time::Instant;
    #[no_mangle]
    fn nanosleep(__requested_time: *const timespec,
                 __remaining:  &mut timespec)  -> i32;
    #[no_mangle]
    fn __errno_location() -> ;




    #[no_mangle]
    fn opendir(__name: *const libc::c_char) -> DIR;
    #[no_mangle]
    fn closedir(__dirp:  &mut DIR)  -> i32;
    #[no_mangle]
    fn readdir(__dirp:  &mut DIR)  -> dirent;
    #[no_mangle]
    fn dirfd(__dirp:  &mut DIR)  -> i32;
    #[no_mangle]
    fn die(message: &mut String, arg1: &mut String,
           exit_code: i32) -> !;

    #[no_mangle]
    fn fix_fd(fd: i32) -> i32;
    #[no_mangle]
    fn uname(__name:  &mut utsname)  -> i32;
}







































#[derive(Copy, Clone)]
#[repr(C)]
pub struct utsname {
    pub sysname: [libc::c_char; 65],
    pub nodename: [libc::c_char; 65],
    pub release: [libc::c_char; 65],
    pub version: [libc::c_char; 65],
    pub machine: [libc::c_char; 65],
    pub domainname: [libc::c_char; 65],
}






extern "C" {
    pub type _IO_wide_data;
    pub type _IO_codecvt;
    pub type _IO_marker;




















}





















#[inline]
unsafe extern "C" fn fputc_unlocked(mut __c: i32,
                                    mut __stream: &mut FILE) -> i32 {
    return if (__stream._IO_write_ptr >= __stream._IO_write_end)  libc::c_int != 0 {
        __overflow(__stream, __c)
    } else {
        let fresh3 = __stream._IO_write_ptr;
        __stream._IO_write_ptr =
            __stream._IO_write_ptr.offset(1);
        *fresh3 = __c;
        *fresh3
    };
}




#[inline]
unsafe extern "C" fn fstatat(mut __fd: i32,
                             mut __filename: *const libc::c_char,
                             mut __statbuf: &mut stat,
                             mut __flag: i32) -> i32 {
    return __fxstatat(1, __fd, __filename, __statbuf, __flag);
}









extern "C" {


    #[no_mangle]
    fn fopen(_: *const libc::c_char, _: *const libc::c_char) -> FILE;


    #[no_mangle]
    fn snprintf(_: &mut String, _: u32,
                _: *const libc::c_char, _: ...) -> i32;


    #[no_mangle]
    fn inet_pton(__af: i32, __cp: *const libc::c_char,
                 __buf:Vec<u8>) -> i32;




    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memset(_:Vec<u8>, _: i32, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memcmp(_: *const libc::c_void, _: *const libc::c_void,
              _: u32) -> i32;




    #[no_mangle]
    fn strerror(_: i32) -> &mut String;



    #[no_mangle]
    fn ungetc(__c: i32, __stream:  &mut FILE)  -> i32;




    #[no_mangle]
    fn free(__ptr:Vec<u8>);
    #[no_mangle]
    fn __ctype_b_loc() -> u16;


    #[no_mangle]
    fn difftime(__time1: time::Instant, __time0: time::Instant) -> libc::c_double;
    #[no_mangle]
    fn ctime(__timer: *const time::Instant) -> &mut String;
    #[no_mangle]
    fn __errno_location() -> ;




    #[no_mangle]
    fn whine_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn safe_malloc(size: usize) ->Vec<u8>;

    #[no_mangle]
    fn prettyprint_addr(addr: NetAddress, buf: &mut String)
                        -> i32;

    #[no_mangle]
    fn blockdata_free(blocks:  &mut blockdata) ;
    #[no_mangle]
    fn read_write(fd: i32, packet: mut Vec<u8>,
                  size: i32, rw: i32) -> i32;
    #[no_mangle]
    fn blockdata_write(block: &mut blockdata, len: usize, fd: i32);
    #[no_mangle]
    fn blockdata_read(fd: i32, len: usize) -> blockdata;
    #[no_mangle]
    fn set_dynamic_inotify(flag: i32, total_size: i32,
                           rhash: &mutcrec, revhashsz: i32);
    #[no_mangle]
    fn canonicalise(in_0: &mut String, nomem: )
                    -> &mut String;
    #[no_mangle]
    fn get_domain6(addr:  &mut in6_addr)  -> &mut String;
    #[no_mangle]
    fn get_domain(addr: in_addr) -> &mut String;
    #[no_mangle]
    fn expand_filelist(list:  &mut hostsfile)  -> hostsfile;
    #[no_mangle]
    fn blockdata_retrieve(block: &mut blockdata, len: usize,
                          data:Vec<u8>) ->Vec<u8>;

    #[no_mangle]
    fn blockdata_report();
}


































// pub const _ISALNUM: C2RustUnnamed_1 = 8;
// pub const _ISPUNCT: C2RustUnnamed_1 = 4;
// pub const _ISCNTRL: C2RustUnnamed_1 = 2;
// pub const _ISBLANK: C2RustUnnamed_1 = 1;
// pub const _ISGRAPH: C2RustUnnamed_1 = 32768;
// pub const _ISPRINT: C2RustUnnamed_1 = 16384;
// pub const _ISSPACE: C2RustUnnamed_1 = 8192;
// pub const _ISXDIGIT: C2RustUnnamed_1 = 4096;
// pub const _ISDIGIT: C2RustUnnamed_1 = 2048;
// pub const _ISALPHA: C2RustUnnamed_1 = 1024;
// pub const _ISLOWER: C2RustUnnamed_1 = 512;
// pub const _ISUPPER: C2RustUnnamed_1 = 256;






























#[derive(Copy, Clone)]
#[repr(C)]
pub struct irec {
    pub addr: NetAddress,
    pub netmask: in_addr,
    pub tftp_ok: i32,
    pub dhcp_ok: i32,
    pub mtu: i32,
    pub done: i32,
    pub warned: i32,
    pub dad: i32,
    pub dns_auth: i32,
    pub index: i32,
    pub multicast_done: i32,
    pub found: i32,
    pub label: i32,
    pub name: &mut String,
    pub next: &mut irec,
}

































/* type->string mapping: this is also used by the name-hash function as a mixing table. */
#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_101 {
    pub type_0: u32,
    pub name: *const libc::c_char,
}







#[inline]

#[inline]
unsafe extern "C" fn fstatat64(mut __fd: i32,
                               mut __filename: *const libc::c_char,
                               mut __statbuf: &mut stat64,
                               mut __flag: i32) -> i32 {
    return __fxstatat64(1, __fd, __filename, __statbuf,
                        __flag);
}

extern "C" {

